--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,90 @@
+ad3 @ file:///C:/Users/admin/Downloads/ad3-2.2.1-cp37-cp37m-win_amd64.whl
+alembic==0.9.6
+aniso8601==8.0.0
+appdirs==1.4.4
+autopep8==1.5.3
+Babel==2.5.1
+beautifulsoup4==4.9.1
+blinker==1.4
+certifi==2017.7.27.1
+chardet==3.0.4
 click==7.1.2
+cycler==0.10.0
+distlib==0.3.1
+dominate==2.3.1
+elasticsearch==7.5.1
+et-xmlfile==1.0.1
+filelock==3.0.12
+flake8==3.8.2
 Flask==1.1.2
+Flask-Babel==0.11.2
+Flask-Bootstrap==3.3.7.1
+Flask-HTTPAuth==4.0.0
+Flask-Login==0.4.0
+Flask-Mail==0.9.1
+Flask-Migrate==2.1.1
+Flask-Moment==0.5.2
+Flask-MySQLdb==0.2.0
+Flask-RESTful==0.3.8
+Flask-Restless==0.17.0
+Flask-Script==2.0.6
+Flask-Sitemap==0.3.0
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+future==0.18.2
+get==2019.4.13
+guess-language-spirit==0.5.3
+idna==2.6
+importlib-metadata==1.6.1
 itsdangerous==1.1.0
+jdcal==1.4.1
 Jinja2==2.11.2
+kiwisolver==1.2.0
+Mako==1.0.7
 MarkupSafe==1.1.1
+matplotlib==3.2.1
+mccabe==0.6.1
+mimerender==0.6.0
+mysqlclient==2.0.1
+numpy==1.18.5
+openpyxl==3.0.4
+pathtools==0.1.2
+post==2019.4.13
+public==2019.4.13
+pycodestyle==2.6.0
+pyflakes==2.2.0
+pygame @ file:///C:/Users/admin/Downloads/pygame-1.9.6-cp37-cp37m-win_amd64.whl
+PyJWT==1.5.3
+PyMySQL==0.9.3
+pyparsing==2.4.7
+pyperclip==1.8.0
+python-dateutil==2.6.1
+python-dotenv==0.7.1
+python-editor==1.0.3
+python-mimeparse==1.6.0
+python-whois==0.7.2
+pytz==2017.2
+PyYAML==5.3.1
+qiniu==7.2.6
+query-string==2019.4.13
+redis==3.2.1
+reload==0.9
+request==2019.4.13
+requests==2.24.0
+requests-futures==0.9.7
+rq==1.0
+selenium==3.141.0
+Send2Trash==1.5.0
+six==1.11.0
+soupsieve==2.0.1
+SQLAlchemy==1.1.14
+toml==0.10.1
+ua-parser==0.7.1
+urllib3==1.22
+user-agents==1.0.1
+virtualenv==20.0.25
+visitor==0.1.3
+watchdog==0.10.3
 Werkzeug==1.0.1
+WTForms==2.1
+zipp==3.1.0
